feat: color styling header and section

--- a/index.css
+++ b/index.css
@@ -1,3 +1,65 @@
+:root {
+  --font-dark: #2b283a;
+  --primary: #5f29a3;
+  --secondary: #d0aaff;
+  --font-light: whitesmoke;
+  --accent: #ef5839;
+  --active: #d4b44c;
+}
+
 body {
-  font-family: Roboto;
+  color: var(--font-dark);
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0;
+}
+
+header {
+  background-color: var(--primary);
+  padding-bottom: 45px;
+  padding-top: 45px;
+}
+
+h1 {
+  color: var(--font-light);
+  font-size: 2rem;
+  margin: 0;
+}
+
+h2 {
+  color: var(--font-dark);
+  font-size: 1.5rem;
+  margin-top: 0;
+}
+
+h3 {
+  color: var(--secondary);
+  font-size: 1.25rem;
+  margin: 0;
+}
+
+p {
+  color: var(--font-dark);
+  font-size: 1rem;
+}
+
+section {
+  padding-bottom: 45px;
+  padding-top: 45px;
+}
+
+.main-image {
+  border: 1px solid red;
+  width: 99%;
+}
+
+a {
+  color: var(--accent);
+  text-decoration: underline dotted;
+  text-underline-offset: 3px;
+}
+
+a:hover {
+  color: var(--active);
 }
