--- a/index.css
+++ b/index.css
@@ -135,16 +135,20 @@ footer {
 a:hover,
 a:focus {
   background: var(--active);
-  color: var(--font-light);
+  color: var(--primary);
 }
 
-.btn-dark,
-.btn-mid,
-.btn-light {
+.btn {
   border-radius: 4.6px;
   display: inline-block;
   font-weight: 500;
   margin: 10px;
   padding: 10px 19px;
   text-decoration: none;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: var(--active);
+  color: var(--primary);
 }
