--- a/index.css
+++ b/index.css
@@ -35,7 +35,7 @@ header {
 h1 {
   color: var(--font-light);
   font-family: "Nunito", sans-serif;
-  font-size: 2rem;
+  font-size: 1.75rem;
   margin: 0;
 }
 
@@ -44,18 +44,20 @@ h2 {
   color: var(--font-dark);
   display: inline-block;
   font-family: "Nunito", sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.375rem;
   margin-top: 0;
 }
 
-h3 {
+.subheading {
   color: var(--secondary);
-  font-size: 1.25rem;
+  display: block;
+  font-size: 1.125rem;
   margin: 0;
 }
 
 p {
   color: var(--font-light);
+  font-size: 1rem;
   line-height: 1.5;
 }
 
@@ -90,14 +92,12 @@ a:hover {
 .container {
   margin: 0 auto;
   max-width: 800px;
-  outline: 1px solid tomato;
   width: 90%;
 }
 
 .section-two-image {
   border-radius: 5px;
   margin-bottom: 1rem;
-  outline: 1px solid tomato;
   width: 100%;
 }
 
@@ -151,6 +151,22 @@ a:focus {
   color: var(--primary);
 }
 
+/* ----- NAVIGATION ----- */
+
+nav a {
+  color: #fff;
+  display: block;
+  font-size: 1.125rem;
+  padding: 1.125rem 0;
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
 @media (min-width: 480px) {
   .section-two-image-container {
     display: flex;
@@ -158,6 +174,20 @@ a:focus {
   }
   .section-two-image {
     width: 48%;
+  }
+}
+
+@media (max-width: 767px) {
+  header {
+    text-align: center;
+  }
+
+  nav a {
+    margin-top: 1.5rem;
+  }
+
+  li:not(:last-child) {
+    border-bottom: 1px solid #a190b6;
   }
 }
 
@@ -171,5 +201,35 @@ a:focus {
   .btn {
     display: inline-block;
     margin: 0.625rem 0.625rem 0.625rem 0;
+  }
+
+  h1 {
+    font-size: 2.25rem;
+  }
+
+  h2 {
+    font-size: 1.75rem;
+  }
+
+  .subheading {
+    font-size: 1.25rem;
+  }
+
+  p {
+    font-size: 1.125rem;
+  }
+
+  header .container,
+  nav ul {
+    display: flex;
+  }
+
+  header .container {
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  nav li {
+    margin-left: 1.25em;
   }
 }
